--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<html>
+<<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>
-</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Homework</title>
+
+    
+
+
+
+
 </head>
-
 <body>
-    sutdentNum : 15054011<br>
-    name : Kim Soo Young<br>
-    welcome <br>
-</body>
+    
+    <img src="file:///C:/Users/%EA%B9%80%EC%94%A8%EB%B0%95%EC%94%A8%EC%BB%B4/Downloads/method-draw-image.svg" 
+         width="400" height="300" title="information security 15054011 Kim Soo Young"/>
 
+    <h2 style="color: crimson">
+      Homework #2
+    </h2>
+    <br/>
+
+
+
+
+
+
+
+</body>
 </html>
