--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             DAY6의 데뷔일은 2015년 9월 7일. 데뷔곡
     </div>
 
-    <p style=color:blue id="song1">'Congratulations'</p> 
+    <p style=color:red id="song1">'Congratulations'</p> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/y1ifPbn7MpQ" 
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>  <a href="https://www.youtube.com/results?search_query=%EB%8D%B0%EC%9D%B4%EC%8B%9D%EC%8A%A4">유튜브(데이식스)</a>
+    </iframe>  <a href="https://www.youtube.com/results?search_query=DAY6">youtube(DAY6)</a>
     </center>
 
         
