--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     <img src="images/method-draw-image.svg" width="400" height="300" title="Information Security 15054011 Kim Soo Young">
     </div>
 
-    <h1 style="color:crimson">
-        <center>Homework#2</center>
-    </h1>
+    <h2 style="color:crimson">
+        Homework#2
+    </h2>
     <br/>
+    <center>
+    <h2>
+        About DAY6
+    </h2>
+</center>
     
 <center>
     <img src="images/Jae.jpg" width="300" height="300">
@@ -57,8 +62,16 @@
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>  <a href="https://www.youtube.com/results?search_query=DAY6">youtube(DAY6)</a>
     </center>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 
-        
+    <h3>
+    <div style=color:slateblue id="footer">
+            &copy;2018. Kim Soo Young.
+    </div>
+    </h3>       
 
 
 
