--- a/example.html
+++ b/example.html
@@ -31,9 +31,9 @@
         <hr>
         <table>
           <thead>
-            <th>Last Name</th>
-            <th>First Name</th>
-            <th colspan="2">Phone Number</th>
+            <th>▼ Last Name</th>
+            <th>▼ First Name</th>
+            <th colspan="2">▼ Phone Number</th>
             
           </thead>
           <tbody id="my-tbody"></tbody>
