--- a/phonebook/phonebook.html
+++ b/phonebook/phonebook.html
@@ -15,19 +15,16 @@
 
 <div id="main">
     Last Name<span><input id="ln" type="text" 
-        value="Last Name" onfocus="this.value=''" 
-        onblur="if(this.value =='') this.value='Last Name';"/><br/></span>
+        placeholder="Last Name"/><br/></span>
     First Name<span><input id="fn" type="text" 
-        value="First Name" onfocus="this.value=''"
-        onblur="if(this.value =='') this.value='First Name';"/><br/></span>
+        placeholder="First Name"/><br/></span>
     Phone Number<span><input id="pn" type="text" 
-        value="Phone Number" onfocus="this.value=''"
-        onblur="if(this.value =='') this.value='Phone Number';"/><br/></span>
+        placeholder="Phone Number"/><br/></span>
 </div>
 
 
 
-<button id="savebtn" onclick="add_row()">Save</button>
+<button id="savebtn" >Save</button>
 
 <hr>
 <table>
