--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </div>
 
     <h2 style="color:crimson">
-        Homework#2
+        Homework#2&nbsp;
+        <a href="swim1295.github.io/phonebook/phonebook">Homework#3</a>&nbsp;
+        <a href="swim1295.github.io/phonebookv2">Homework#4</a>
+
     </h2>
     <br/>
     <center>
