--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <h2 style="color:crimson">
         Homework#2&nbsp;
         <a href="swim1295.github.io/phonebook/phonebook">Homework#3</a>&nbsp;
-        <a href="swim1295.github.io/phonebookv2">Homework#4</a>
+        <a href="swim1295.github.io/phonebookv2">Homework#4</a>&nbsp;
+        <a href="swim1295.github.io/hw6/mymap.html">HomeWork#6</a>&nbsp;
 
     </h2>
     <br/>
