--- a/hw6/mymap.html
+++ b/hw6/mymap.html
@@ -11,7 +11,8 @@
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 </head>
 <body>
-    <div class="wrap">
+
+    <p>Seoul Map</p>
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="800px" height="800px" viewBox="0 0 1400 1400" enable-background="new 0 0 1400 1400" xml:space="preserve">
 <path id="Dobong-gu"  fill="#C8C8C8" d="M964.064,164.667
@@ -360,7 +361,6 @@
 	c2.834,0,5.668,0,8.502,0c2.344-0.324,5.988,0.654,7.502-0.5c3.334,0,6.668,0,10.002,0
     C730.596,766.053,735.563,764.919,737.012,767.305z"/>
 </svg>
-</div>
 
 </body>
 </html>
