--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
     
 </head>
-<body>
+<body class="main">
     <div>
     <img src="images/method-draw-image.svg" width="500" height="400" title="Information Security 15054011 Kim Soo Young">
     </div>
@@ -19,7 +19,7 @@
         Homework#2&nbsp;
         <a href="swim1295.github.io/phonebook/phonebook">Homework#3</a>&nbsp;
         <a href="swim1295.github.io/phonebookv2">Homework#4</a>&nbsp;
-        <a href="swim1295.github.io/hw6/mymap.html">HomeWork#6</a>&nbsp;
+        <a href="swim1295.github.io/hw6/mymap.html">Homework#6</a>&nbsp;
 
     </h2>
     <br/>
