--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="swim1295.github.io/phonebook/phonebook">Homework#3</a>&nbsp;
         <a href="swim1295.github.io/phonebookv2">Homework#4</a>&nbsp;
         <a href="swim1295.github.io/hw6/mymap.html">Homework#6</a>&nbsp;
+        <a href="swim1295.github.io/paint/index.html">Homework#7</a>&nbsp;
 
     </h2>
     <br/>
