--- a/paint/index.html
+++ b/paint/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
  <meta charset="UTF-8">
- <title>kyungmin</title>
+ <title>Kimsooyoung/title>
  <link rel="stylesheet" href="paint.css">
 </head>
 <body id="main" onload="ready()">
@@ -36,9 +36,9 @@
     <input type="button" value="20px" onclick="w20()"></input>
     <input type="button" value="30px" onclick="w30()"></input> <br /><br />
   
-    <img src="images/reset.png" title="Reset" width="40px"
+    <img src="reset.png" title="Reset" width="40px"
                 height="40px" onclick="erase()">
-    <img src="images/eraser.png" title="Eraser" width="40px"
+    <img src="eraser.png" title="Eraser" width="40px"
             height="40px" onclick="white()"></input> <br /><br />
    </div>
 </body>
