--- a/paint/index.html
+++ b/paint/index.html
@@ -36,9 +36,9 @@
     <input type="button" value="20px" onclick="w20()"></input>
     <input type="button" value="30px" onclick="w30()"></input> <br /><br />
   
-    <img src="reset.png" title="Reset" width="40px"
+    <img src="images/reset.png" title="Reset" width="40px"
                 height="40px" onclick="erase()">
-    <img src="eraser.png" title="Eraser" width="40px"
+    <img src="images/eraser.png" title="Eraser" width="40px"
             height="40px" onclick="white()"></input> <br /><br />
    </div>
 </body>
