--- a/paint/index.html
+++ b/paint/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
  <meta charset="UTF-8">
- <title>Kimsooyoung/title>
+ <title>Kimsooyoung</title>
  <link rel="stylesheet" href="paint.css">
 </head>
 <body id="main" onload="ready()">
@@ -30,15 +30,17 @@
 
   <div class="px">
   
-    <input type="button" value="0.1px" onclick="w1()"></input>
-    <input type="button" value="5px" onclick="w5()"></input>
-    <input type="button" value="15px" onclick="w15()"></input>
-    <input type="button" value="20px" onclick="w20()"></input>
-    <input type="button" value="30px" onclick="w30()"></input> <br /><br />
+    <input type="button" value="30px" style="font-size:30pt;" onclick="w30()"></input> 
+    <input type="button" value="20px" style="font-size:20pt;" onclick="w20()"></input>
+    <input type="button" value="15px" style="font-size:15pt;" onclick="w15()"></input>
+    <input type="button" value="5px" style="font-size:5pt;" onclick="w5()"></input>
+    <input type="button" value="0.1px" style="font-size:0.1pt;" onclick="w1()"></input>
+    &nbsp;&nbsp;&nbsp;&nbsp;
   
-    <img src="images/reset.png" title="Reset" width="40px"
+    <img src="C:\Users\김수영\swim1295.github.io/images/reset.png" title="Reset" width="40px"
                 height="40px" onclick="erase()">
-    <img src="images/eraser.png" title="Eraser" width="40px"
+    &nbsp;&nbsp;
+    <img src="C:\Users\김수영\swim1295.github.io/images/eraser.png" title="Eraser" width="40px"
             height="40px" onclick="white()"></input> <br /><br />
    </div>
 </body>
