--- a/paint/index.html
+++ b/paint/index.html
@@ -12,7 +12,7 @@
  <canvas id="canvas" width="575" height="400"></canvas>
 
  <div class="colorBox">
-    <input type="button" class="colorBtn" style="background-color: red; width:40px;height:40px;" onclick="red()"></input>
+    <input type="button" class="colorBtn" style="background-color: #ff0000; width:40px;height:40px;" onclick="red()"></input>
     <input type="button" class="colorBtn" style="background-color: orange; width:40px;height:40px;" onclick="orange()"></input>
     <input type="button" class="colorBtn" style="background-color: yellow; width:40px;height:40px;" onclick="yellow()"></input>
     <input type="button" class="colorBtn" style="background-color: green;width:40px;height:40px;" onclick="green()"></input>
@@ -37,10 +37,10 @@
     <input type="button" value="0.1px" style="font-size:0.1pt;" onclick="w1()"></input>
     &nbsp;&nbsp;&nbsp;&nbsp;
   
-    <img src="C:\Users\김수영\swim1295.github.io/images/reset.png" title="Reset" width="40px"
+    <img src="../images/reset.PNG" title="Reset" width="40px"
                 height="40px" onclick="erase()">
     &nbsp;&nbsp;
-    <img src="C:\Users\김수영\swim1295.github.io/images/eraser.png" title="Eraser" width="40px"
+    <img src="../images/eraser.PNG" title="Eraser" width="40px"
             height="40px" onclick="white()"></input> <br /><br />
    </div>
 </body>
