--- a/paint/index.html
+++ b/paint/index.html
@@ -37,10 +37,10 @@
     <input type="button" value="0.1px" style="font-size:0.1pt;" onclick="w1()"></input>
     &nbsp;&nbsp;&nbsp;&nbsp;
   
-    <img src="../images/reset.PNG" title="Reset" width="40px"
+    <img src="../images/reset.png" title="Reset" width="40px"
                 height="40px" onclick="erase()">
     &nbsp;&nbsp;
-    <img src="../images/eraser.PNG" title="Eraser" width="40px"
+    <img src="../images/eraser.png" title="Eraser" width="40px"
             height="40px" onclick="white()"></input> <br /><br />
    </div>
 </body>
