--- a/paint/index.html
+++ b/paint/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -12,17 +11,17 @@
  <canvas id="canvas" width="575" height="400"></canvas>
 
  <div class="colorBox">
-    <input type="button" class="colorBtn" style="background-color: #ff0000; width:40px;height:40px;" onclick="red()"></input>
-    <input type="button" class="colorBtn" style="background-color: orange; width:40px;height:40px;" onclick="orange()"></input>
-    <input type="button" class="colorBtn" style="background-color: yellow; width:40px;height:40px;" onclick="yellow()"></input>
-    <input type="button" class="colorBtn" style="background-color: green;width:40px;height:40px;" onclick="green()"></input>
-    <input type="button" class="colorBtn" style="background-color: blue; width:40px;height:40px;"onclick="blue()"></input>
-    <input type="button" class="colorBtn" style="background-color: navy; width:40px;height:40px;"onclick="navy()"></input>
-    <input type="button" class="colorBtn" style="background-color: purple; width:40px;height:40px;" onclick="purple()"></input>
-    <input type="button" class="colorBtn" style="background-color: brown; width:40px;height:40px;" onclick="brown()"></input>
-    <input type="button" class="colorBtn" style="background-color: pink; width:40px;height:40px;"onclick="pink()"></input>
-    <input type="button" class="colorBtn" style="background-color: gray; width:40px;height:40px;"onclick="gray()"></input>
-    <input type="button" class="colorBtn" style="background-color: black;width:40px;height:40px;" onclick="black()"></input>
+    <input type="button" class="colorBtn" style="background-color: #93DAFF; width:40px;height:40px;" onclick="A()"></input>
+    <input type="button" class="colorBtn" style="background-color: #ACF3FF; width:40px;height:40px;" onclick="B()"></input>
+    <input type="button" class="colorBtn" style="background-color: #C3E7FA; width:40px;height:40px;" onclick="C()"></input>
+    <input type="button" class="colorBtn" style="background-color: #00BFFF;width:40px;height:40px;" onclick="D()"></input>
+    <input type="button" class="colorBtn" style="background-color: #32F1FF; width:40px;height:40px;"onclick="E()"></input>
+    <input type="button" class="colorBtn" style="background-color: #00D7FF; width:40px;height:40px;"onclick="F()"></input>
+    <input type="button" class="colorBtn" style="background-color: #96A5FF; width:40px;height:40px;" onclick="G()"></input>
+    <input type="button" class="colorBtn" style="background-color: #86A5FF; width:40px;height:40px;" onclick="H()"></input>
+    <input type="button" class="colorBtn" style="background-color: #FF46C5; width:40px;height:40px;"onclick="I()"></input>
+    <input type="button" class="colorBtn" style="background-color: gray; width:40px;height:40px;"onclick="J()"></input>
+    <input type="button" class="colorBtn" style="background-color: black;width:40px;height:40px;" onclick="K()"></input>
   </div>
   <div>
 
@@ -46,4 +45,3 @@
 </body>
 </html>
 <script src="paint.js"></script>
-
