--- a/paint/index.html
+++ b/paint/index.html
@@ -29,11 +29,11 @@
 
   <div class="px">
   
-    <input type="button" value="30px" style="font-size:30pt;" onclick="w30()"></input> 
-    <input type="button" value="20px" style="font-size:20pt;" onclick="w20()"></input>
-    <input type="button" value="15px" style="font-size:15pt;" onclick="w15()"></input>
-    <input type="button" value="5px" style="font-size:5pt;" onclick="w5()"></input>
-    <input type="button" value="0.1px" style="font-size:0.1pt;" onclick="w1()"></input>
+    <input type="button" value="30pt" style="font-size:30pt;" onclick="w30()"></input> 
+    <input type="button" value="20pt" style="font-size:20pt;" onclick="w20()"></input>
+    <input type="button" value="15pt" style="font-size:15pt;" onclick="w15()"></input>
+    <input type="button" value="5pt" style="font-size:5pt;" onclick="w5()"></input>
+    <input type="button" value="0.1pt" style="font-size:0.1pt;" onclick="w1()"></input>
     &nbsp;&nbsp;&nbsp;&nbsp;
   
     <img src="../images/reset.png" title="Reset" width="40px"
