--- a/hw-firebase/fb.html
+++ b/hw-firebase/fb.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div id="main">
-            <a href="https://swim1295.github.io/hw-firebase/index.html"target="_blank">Customers</a>
+            <a href="https://swim1295.github.io/hw-firebase/fb.html"target="_blank">Customers</a>
             <a href="https://swim1295.github.io/hw-firebase/fb2.html"target="_blank">Employees</a>
             <a href="https://swim1295.github.io/hw-firebase/index.html"target="_blank">Home</a><br />
     <h1>Customers</h1>
