--- a/hw-firebase/fb.html
+++ b/hw-firebase/fb.html
@@ -44,6 +44,6 @@
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-    <script src="hw10.js"></script>
+    <script src="hw10_2.js"></script>
 </body>
 </html>
