--- a/hw-firebase/fb2.html
+++ b/hw-firebase/fb2.html
@@ -46,6 +46,6 @@
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-    <script src="hw10_2.js"></script>
+    <script src="hw10.js"></script>
 </body>
 </html>
