--- a/hw-firebase/fb.html
+++ b/hw-firebase/fb.html
@@ -29,7 +29,7 @@
        ID<br/>         <input type="text"  id="id"><br/>
        FIRST NAME<br/> <input type="text"  id="firstname"><br/>
        LAST NAME<br/>  <input type="text"  id="lastname"><br/>
-       BIRTH DAY <br/> <input type="text"  id="birthday" value="1990-05-22"><br/>
+       BIRTH DAY <br/> <input type="text"  id="birthday" placeholder="1995-04-24"><br/>
        <button id="button_save">Save</button>
 
        <h3>Customers</h3>
