--- a/hw-firebase/fb2.html
+++ b/hw-firebase/fb2.html
@@ -30,7 +30,7 @@
        ID<br/>         <input type="text"  id="id"><br/>
        FIRST NAME<br/> <input type="text"  id="firstname"><br/>
        LAST NAME<br/>  <input type="text"  id="lastname"><br/>
-       BIRTH DAY <br/> <input type="text"  id="birthday" value="1990-08-15"><br/>
+       BIRTH DAY <br/> <input type="text"  id="birthday" placeholder="1995-04-24"><br/>
        POSITION <br/>  <input type="text"  id="po"><br/>
        <button id="button_save">Save</button>
 
