--- a/hw-firebase/fb.html
+++ b/hw-firebase/fb.html
@@ -34,7 +34,8 @@
 
        <h3>Customers</h3>
     <table id="list" width="100%" border="1"> 
-        <tr><th>ID</th> <th>Firstname</th> <th>Lastname</th> <th>Birthday</th> <th>Age</th> <th>Actions</th> </tr>
+        <tr><th style="background-color: #aaa">ID</th> <th>Firstname</th> <th style="background-color: #aaa">Lastname</th>
+             <th>Birthday</th> <th style="background-color: #aaa">Age</th> <th>Actions</th> </tr>
 
 
        
