--- a/hw-firebase/fb.html
+++ b/hw-firebase/fb.html
@@ -26,10 +26,10 @@
             <a href="https://swim1295.github.io/hw-firebase/fb2.html"target="_blank">Employees</a>
             <a href="https://swim1295.github.io/hw-firebase/index.html"target="_blank">Home</a><br />
     <h1>Customers</h1>
-       ID<br/>         <input type="text"  id="id" placeholder="1">
-       FIRST NAME<br/> <input type="text"  id="firstname" placeholder="Sooyoung">
-       LAST NAME<br/>  <input type="text"  id="lastname" placeholder="Kim">
-       BIRTH DAY <br/> <input type="text"  id="birthday" placeholder="1995-04-24"><br/>
+       ID         <input type="text"  id="id" placeholder="1"><br/>
+       FIRST NAME <input type="text"  id="firstname" placeholder="Sooyoung"><br/>
+       LAST NAME  <input type="text"  id="lastname" placeholder="Kim"><br/>
+       BIRTH DAY  <input type="text"  id="birthday" placeholder="1995-04-24"><br/>
        <button id="button_save">Save</button>
 
        <h3>Customers</h3>
