--- a/hw-firebase/fb2.html
+++ b/hw-firebase/fb2.html
@@ -23,9 +23,9 @@
 <body>
     
     <div id="main">
-            <a href="https://swim1295.github.io/hw-firebase/fb.html"target="_blank">Customers</a>
-            <a href="https://swim1295.github.io/hw-firebase/fb2.html"target="_blank">Employees</a>
-            <a href="https://swim1295.github.io/hw-firebase/index.html"target="_blank">Home</a><br />
+            <a href="https://swim1295.github.io/hw-firebase/fb.html"target="site">Customers</a>
+            <a href="https://swim1295.github.io/hw-firebase/fb2.html"target="site">Employees</a>
+            <a href="https://swim1295.github.io/hw-firebase/index.html"target="site">Home</a><br />
     <h1>Empolyees</h1>
        ID         <input type="text"  id="id" placeholder="1"><br/>
        FIRST NAME <input type="text"  id="firstname" placeholder="Sooyoung"><br/>
