--- a/hw-firebase/index.html
+++ b/hw-firebase/index.html
@@ -25,8 +25,8 @@
 <body id="main_">
     
     <div id="main">
-        <a href="https://swim1295.github.io/hw-firebase/fb.html"target="_blank">Customers</a>
-        <a href="https://swim1295.github.io/hw-firebase/fb2.html"target="_blank">Employees</a>    
+        <a href="https://swim1295.github.io/hw-firebase/fb.html"target="site">Customers</a>
+        <a href="https://swim1295.github.io/hw-firebase/fb2.html"target="site">Employees</a>    
     
         <br /><br /><br /><br />
      <center>   
