--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>wp_final_project</title>
     <link rel="stylesheet" href="final_P.css"/>
+    <link rel="stylesheet" href="svg.css"/>
 
 
 </head>
 <body>
     <div id="main">
-    <h3 style="text-align: center;">Information Security 15050411 KimSooyoung</h3>
+    <h3 style="text-align: center;" id="info">Information Security 15050411 KimSooyoung</h3>
 
-    <div id="animate">
-            
-                 
-    </div>
-    <hr/>
+    <div class="animate">
+            <div class="neon">Web Programing </div>
+            <div class="flux">Final Project </div>
+          </div>
+
 
     <div id="iFrame">
-        <iframe src="siteList.html" name="sitelist"
-            width="120" height="300" id="leftFrame" frameborder="0">
+        <iframe src="menu.html" name="sitelist"
+            width="250" height="700" id="leftFrame" frameborder="0">
         </iframe>
 
         <iframe src="paint/index.html" name="site"
-            width="300" height="320" id="rightFrame">
+            width="700" height="700" id="rightFrame" frameborder="0"
+            scrolling="auto">
         </iframe>
     </div>
 
