--- a/menu.html
+++ b/menu.html
@@ -15,19 +15,16 @@
 
     
         <button type="button" class="but">
-            <a href="paint/index.html" >PaintApp</a>
+            <a href="home.html" target="site">Home</a>
         </button><br/><br/><br/>
         <button type="button" class="but">
-            <a href="bounceball/index.html" >BouncingBalls</a>
+            <a href="siteList.html" target="site">Projects</a>
         </button><br/><br/><br/>
         <button type="button" class="but">
-            <a href="bounceball/game/bouGame.html" >BouncingBallGame</a>
+            <a href="aboutMe.html" target="site">About Me</a>
         </button><br/><br/><br/>
         <button type="button" class="but">
-            <a href="webEditor/editor.html" >WebEditor</a>
-        </button><br/><br/><br/>
-        <button type="button" class="but">
-            <a href="hw-firebase/index.html" >WebAppUsingFirebase</a>
+            <a href="link.html" target="site">Links</a>
         </button><br/><br/><br/>
         </div>
 
