--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width="250" height="700" id="leftFrame" frameborder="0">
         </iframe>
 
-        <iframe src="paint/index.html" name="site"
+        <iframe src="home.html" name="site"
             width="700" height="700" id="rightFrame" frameborder="0"
             scrolling="auto">
         </iframe>
