--- a/link.html
+++ b/link.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <br/><br/>
-    <p>favorite singer : <a href="https://www.youtube.com/results?search_query=day6">DAY6</a></p>
+    <p>favorite singer : <a href="https://www.youtube.com/results?search_query=day6" target="site">DAY6</a></p>
 </body>
 </html>
