--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3 style="text-align: center;" id="info">Information Security 15050411 KimSooyoung</h3>
 
     <div class="animate">
-            <div class="neon">Web Programing </div>
+            <div class="neon">Web Programming </div>
             <div class="flux">Final Project </div>
           </div>
 
